--- a/androidpn-client-0.5.0-xg/AndroidManifest.xml
+++ b/androidpn-client-0.5.0-xg/AndroidManifest.xml
@@ -22,6 +22,7 @@
 				<action android:name="org.androidpn.client.NotificationService" />
 			</intent-filter>
 		</service>
+        <receiver android:name=".HeartActionBroadCast"/>
 		<!--
 			<meta-data android:name="ANDROIDPN_API_KEY"
 			android:value="1234567890" />
